53) Hide 802G/N mode for ethernet converter(STA driver not support this mode correct).<br>
54) Remove some debug messages from web and set auto redirect at apply push.<br>
55) Rework wifi/wan/lan reinit in internet.sh. More correct for MBSSID mode.<br>
56) Fix wds reconfigure and operationMode adjustment.<br>
57) Video turbine MSC extended mode enabled for wifi.(AP/STA mode. variable VideoTurbine 0/1 default 1. need add in webUI)<br>
58) Update wsc_upnp to 0.2.2 version from 3.6.0.0 SDK.<br>
59) Fix dns static and relay disabled mode.<br>
60) Small fix double vlan tag.<br>
61) Uboot add disable/enable erase command to menuconfig.<br>
62) More checks data in dhcpd configure script.<br>
63) Goahead: fix some services restart.<br>
64) Add reinit LAN ports in direct dns relay mode, need for renew params at clients (if disable dnsmasq and emable dhcp server).<br>
65) init.d fix screen bug in some scripts.<br>
66) Fix configure dns in vpn mode if uplink not send dns servers in pppd session.<br>
67) Tune miniupnpd defaults.<br>
68) Printserver p910nd use bidirection mode by default.<br>
69) More optimize for small/save memory builds.<br>
70) Update wireless tools to v30-rc7 (need for support UTF-8 SSID in console tools).<br>
71) Goahead fix proc gmac path for new chips.
72) Fix dhcp setup webui and small corrections defaults.<br>
73) Add check oversized packets in rx path.<br>
74) Small fix skb_alloc in raeth.<br>
75) Small fix packet padding in raeth.<br>
76) Rework raeth config procedure in driver.<br>
77) PPP fix multilink fragment MTU calculation and build fix.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>