@@ -264,6 +264,7 @@ CONFIG_IP_MROUTE=y
 # CONFIG_IP_PIMSM_V1 is not set
 # CONFIG_IP_PIMSM_V2 is not set
 CONFIG_ARP_NOTIFY_MEDIA_STATE=y
+CONFIG_ARP_HASH_FASTPATH=y
 CONFIG_SYN_COOKIES=y
 # CONFIG_INET_AH is not set
 # CONFIG_INET_ESP is not set
