@@ -160,7 +160,7 @@ config IP_PNP_RARP
 	  details.
 
 # not yet ready..
-#   bool '    IP: ARP support' CONFIG_IP_PNP_ARP		
+#   bool '    IP: ARP support' CONFIG_IP_PNP_ARP
 config NET_IPIP
 	tristate "IP: tunneling"
 	select INET_TUNNEL
@@ -268,6 +268,10 @@ config ARP_NOTIFY_MEDIA_STATE
 	  switches at change of adjustments or the status of the network interface.
 	  This is workaroud for bad switches as D-Link D1005 baset at IC+ and some
 	  WLAN clients as RTL8187SE/BCM41**
+
+config ARP_HASH_FASTPATH
+	bool "Use faster hash funcrtion instead jhash2 for arp subsystem."
+	default y
 
 config SYN_COOKIES
 	bool "IP: TCP syncookie support (disabled per default)"
