@@ -695,6 +695,7 @@
 75) Small fix packet padding in raeth.<br>
 76) Rework raeth config procedure in driver.<br>
 77) PPP fix multilink fragment MTU calculation and build fix.<br>
+78) Use faster hash funcrtion instead jhash2 for arp subsystem.<br>
 
 <br><br>
 <b>For support see:</b><br>
